--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,7 @@ server {
 	root /var/www/html/api/public;
 
 	location / {
-		try_files $uri $uri/ /index.php$query_string;
+		try_files $uri $uri/ /index.php?$query_string;
 	}
 
 	location ~ \.php$ {
